--- a/packages/react/src/ActionMenu/ActionMenu.module.css
+++ b/packages/react/src/ActionMenu/ActionMenu.module.css
@@ -33,6 +33,14 @@
     0px 12px 10px rgba(0, 0, 0, 0.03), 0px 6px 5px rgba(0, 0, 0, 0.04), 0px 2px 2px rgba(0, 0, 0, 0.07);
 }
 
+.ActionMenu__menu--small {
+  padding: var(--base-size-8);
+}
+
+.ActionMenu__menu--medium {
+  padding: var(--base-size-12);
+}
+
 .ActionMenu__menu--visible {
   visibility: visible;
 }
@@ -116,7 +124,7 @@
 }
 
 .ActionMenu__item--small {
-  padding: var(--brand-control-small-paddingBlock) var(--brand-control-small-paddingInline-normal);
+  padding: var(--base-size-8) var(--brand-control-small-paddingInline-condensed);
 }
 
 .ActionMenu__item[aria-disabled='true'] {
