add SkipToContent button to SubdomainNavBar (#503)
* add SkipToContent button to SubdomainNavBar

* revert organize imports

* add changeset

* address PR feedback

* useId

* address PR feedback

* use main tag if possible

* give startOfContent div tabIndex -1

* correctly merge

* npm update

* use reference for main element

* Rename the two test stories

* npm update

* ignore role main confict

* sorry prettier I forgot a trailing space

---------

Co-authored-by: Joseph Lozano <Joseph-lozano@github.com>
Co-authored-by: Nikola Stamatović <nikola@stamat.info>
Co-authored-by: Nikola Stamatović <stamat@github.com>

--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -653,6 +653,14 @@
   color: var(--base-color-scale-black-0);
 }
 
+.SubdomainNavBar-skip-to-content {
+  position: fixed;
+  top: 75px;
+  border-radius: 0px;
+  width: 100vw;
+  z-index: 100;
+}
+
 /*
  * Reusable animations
  */
