--- a/packages/react/src/SubNav/SubNav.module.css
+++ b/packages/react/src/SubNav/SubNav.module.css
@@ -5,18 +5,6 @@
   padding: var(--base-size-16);
 }
 
-@media screen and (min-width: 48rem) {
-  .SubNav {
-    padding: var(--base-size-16) var(--base-size-24);
-  }
-}
-
-@media screen and (min-width: 63.25rem) {
-  .SubNav {
-    padding: var(--base-size-16) var(--base-size-32);
-  }
-}
-
 .SubNav__heading {
   font-weight: var(--base-text-weight-bold);
   color: var(--brand-color-text-default);
@@ -44,8 +32,8 @@
  * Narrow breakpoint
  */
 
-@media screen and (max-width: 63.25rem) {
-  .SubNav::after {
+@media screen and (max-width: 63.24rem) {
+  .SubNav::before {
     content: '';
     position: absolute;
     top: 0;
@@ -54,6 +42,20 @@
     right: 0;
     opacity: 0;
     z-index: 9997;
+  }
+
+  .SubNav--open::after {
+    content: '';
+    background-color: var(--base-color-scale-black-0);
+    opacity: 0.3;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
   }
 
   .SubNav__heading {
@@ -65,7 +67,7 @@
     display: block;
   }
 
-  .SubNav--open::after {
+  .SubNav--open::before {
     background-color: var(--brand-color-canvas-default);
     animation: fade-in 0.3s var(--brand-animation-easing-glide) forwards;
   }
@@ -125,11 +127,21 @@
   fill: var(--brand-color-text-default);
 }
 
+@media screen and (min-width: 48rem) {
+  .SubNav {
+    padding: var(--base-size-16) var(--base-size-24);
+  }
+}
+
 /*
  * Wide breakpoint
  */
 
 @media screen and (min-width: 63.25rem) {
+  .SubNav {
+    padding: var(--base-size-16) var(--base-size-32);
+  }
+
   .SubNav__overlay-toggle {
     display: none;
   }
