Rename missing instances of pricing card

--- a/packages/react/src/PricingOptions/PricingOptions.module.css
+++ b/packages/react/src/PricingOptions/PricingOptions.module.css
@@ -1,5 +1,5 @@
 /* ---------------------------------------------------------- */
-/* Pricing cards component                                    */
+/* Pricing options component                                  */
 /* ---------------------------------------------------------- */
 /* Table of contents:                                         */
 /* 1. Container                                               */
