--- a/packages/react/src/SubNav/SubNav.module.css
+++ b/packages/react/src/SubNav/SubNav.module.css
@@ -14,6 +14,7 @@
 
 .SubNav__heading:hover {
   color: var(--brand-SubNav-color-link-active);
+  text-decoration: none;
 }
 
 .SubNav__heading-container {
@@ -167,6 +168,7 @@
     align-items: center;
     display: flex;
     gap: var(--base-size-24);
+    z-index: 1;
   }
 
   .SubNav__link {
@@ -178,6 +180,7 @@
   .SubNav__link:hover *,
   .SubNav__link[aria-current] * {
     color: var(--brand-SubNav-color-link-active);
+    text-decoration: none;
   }
 
   .SubNav__link-label::after {
